# salle-bot

./: .gitignore  Cargo.toml
src/: calendar.rs  calendar_sync.rs  hash_map_vec.rs  main.rs  salle-bot-default.toml
