[package]
name = "salle-bot"
version = "0.1.0"
authors = ["Edgar Onghena <dev@edgar.bzh>"]
edition = "2018"

[dependencies]
arraystring = "0.3"
chrono = "0.4"
ical = "0.6"
lazy_static = "1.4"
regex = "1.3"
reqwest = "0.10"
serenity = "0.9.0-rc.1"
tokio = { version = "0.2", features = ["macros"] }
toml = "0.5"
